--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -631,7 +631,9 @@
     }
 
     .logo-image {
-        height: 44px;
+        height: 56px;
+        margin-top: -12px;
+        margin-bottom: -10px;
     }
 
     .navbar-search {
@@ -712,7 +714,9 @@
     }
 
     .logo-image {
-        height: 40px;
+        height: 50px;
+        margin-top: -10px;
+        margin-bottom: -8px;
     }
 
     .user-avatar {
@@ -763,7 +767,9 @@
     }
 
     .logo-image {
-        height: 36px;
+        height: 46px;
+        margin-top: -8px;
+        margin-bottom: -6px;
     }
 
     .action-badge {
